# gtsam

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  export_recipes.py  install.py  lock.py
CppUnitLite/: CMakeLists.txt
cmake/: GtsamBuildTypes.cmake  HandleBoost.cmake  HandleEigen.cmake  HandleMetis.cmake
gtsam/: CMakeLists.txt  config.h.in
gtsam/base/: FastSet.h  Matrix.cpp  Matrix.h  SymmetricBlockMatrix.cpp  SymmetricBlockMatrix.h  Vector.cpp  cholesky.cpp  types.cpp  types.h
gtsam/base/tests/: testSerializationBase.cpp  testStdOptionalSerialization.cpp
gtsam/basis/: Chebyshev.h
gtsam/discrete/: DecisionTree-inl.h
gtsam/geometry/: Point2.h  Pose2.h  geometry.i
gtsam/inference/: ClusterTree-inst.h  EliminateableFactorGraph-inst.h  EliminationTree-inst.h
gtsam/linear/: HessianFactor.cpp  JacobianFactor.cpp  LossFunctions.h  NoiseModel.h  VectorValues.cpp  iterative.h
gtsam/navigation/: MagPoseFactor.h  PreintegratedRotation.h
gtsam/nonlinear/: ISAM2-impl.h  LinearContainerFactor.h
gtsam/nonlinear/internal/: ExecutionTrace.h
gtsam/sfm/: ShonanAveraging.cpp
gtsam/slam/: ProjectionFactor.h  SmartFactorBase.h
gtsam/slam/tests/: testSerializationInSlam.cpp
gtsam_unstable/: CMakeLists.txt
gtsam_unstable/linear/: LPSolver.h
gtsam_unstable/nonlinear/: ConcurrentBatchFilter.cpp  ConcurrentFilteringAndSmoothing.cpp
gtsam_unstable/slam/tests/: testProjectionFactorRollingShutter.cpp
tests/: testSerializationSlam.cpp
